@@ -1,3 +1,8 @@
+Sun May 13 01:13:46 2001  George Lebl <jirka@5z.com>
+
+	* session.c: when reading the main menu flags use the default flags
+	  function so that we also get the distribution menu if available
+
 Sat May 12 19:22:39 2001  George Lebl <jirka@5z.com>
 
 	* aligned-widget.c, basep-widget.[ch], sliding-widget.c,
